--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="w-12 h-12 rounded-full bg-black text-white flex items-center justify-center font-bold">FD</div>
       <div>
         <h1 class="text-lg font-semibold">Flay — Designer</h1>
-        <p class="text-sm text-gray-600">Logo • Social • Posters • UI/UX mockups</p>
+        <p class="text-sm text-gray-600">Product Advertisement • Posters • UI/UX mockups</p>
       </div>
     </div>
     <nav class="hidden md:flex gap-6 items-center text-sm">
@@ -24,7 +24,7 @@
   </header>  <!-- Hero -->  <section class="max-w-5xl mx-auto px-6 py-12 flex flex-col md:flex-row items-center gap-10">
     <div class="flex-1">
       <h2 class="text-4xl md:text-5xl font-extrabold leading-tight">Designs that make brands stick.</h2>
-      <p class="mt-4 text-gray-600">I craft simple, modern visuals for creators and small businesses — logos, social kits, posters and product mockups. Fast turnaround. Clean aesthetic.</p>
+      <p class="mt-4 text-gray-600">I craft simple, modern visuals for creators and small businesses — social kits, posters and product mockups. Fast turnaround. Clean aesthetic.</p>
       <div class="mt-6 flex gap-3">
         <a href="#contact" class="rounded-lg px-5 py-3 bg-black text-white shadow-sm">Hire me</a>
         <a href="#portfolio" class="rounded-lg px-5 py-3 border">See work</a>
@@ -76,26 +76,20 @@
       <div class="p-6 bg-white rounded-2xl shadow-sm">
         <h4 class="font-semibold">Logo & Brand Starter</h4>
         <p class="text-gray-600 mt-2">Logo, color palette, 1 social tile.</p>
-        <div class="mt-4 font-bold">₹999</div>
+        <div class="mt-4 font-bold">10$</div>
       </div>
       <div class="p-6 bg-white rounded-2xl shadow-sm">
         <h4 class="font-semibold">Social Kit</h4>
         <p class="text-gray-600 mt-2">10 Instagram posts + 5 stories + cover image.</p>
-        <div class="mt-4 font-bold">₹2,499</div>
+        <div class="mt-4 font-bold">28$</div>
       </div>
-      <div class="p-6 bg-white rounded-2xl shadow-sm">
-        <h4 class="font-semibold">Posters & Print</h4>
-        <p class="text-gray-600 mt-2">A3 poster + print-ready files + source file.</p>
-        <div class="mt-4 font-bold">₹1,299</div>
-      </div>
-    </div>
   </section>  <!-- Pricing -->  <section id="pricing" class="max-w-5xl mx-auto px-6 py-12">
     <h3 class="text-2xl font-semibold">Pricing</h3>
     <p class="text-gray-600 mt-2">Simple, upfront pricing. Custom quotes available.</p>
     <div class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl bg-gradient-to-br from-white to-gray-50 shadow">
         <div class="text-sm uppercase tracking-wide">Basic</div>
-        <div class="mt-3 text-2xl font-bold">₹499</div>
+        <div class="mt-3 text-2xl font-bold">5$</div>
         <ul class="mt-4 text-sm space-y-2 text-gray-600">
           <li>1 concept</li>
           <li>1 revision</li>
@@ -104,39 +98,30 @@
       </div>
       <div class="p-6 rounded-2xl bg-white shadow-lg">
         <div class="text-sm uppercase tracking-wide">Standard</div>
-        <div class="mt-3 text-2xl font-bold">₹1,299</div>
+        <div class="mt-3 text-2xl font-bold">15$</div>
         <ul class="mt-4 text-sm space-y-2 text-gray-600">
           <li>2 concepts</li>
           <li>3 revisions</li>
-          <li>Source files</li>
-        </ul>
-      </div>
-      <div class="p-6 rounded-2xl bg-white shadow-sm">
-        <div class="text-sm uppercase tracking-wide">Premium</div>
-        <div class="mt-3 text-2xl font-bold">₹3,499</div>
-        <ul class="mt-4 text-sm space-y-2 text-gray-600">
-          <li>Full brand pack</li>
-          <li>Priority delivery</li>
-          <li>Extra revisions</li>
+          <li>Delivery: 2-3 days</li>
         </ul>
       </div>
     </div>
   </section>  <!-- Contact -->  <section id="contact" class="max-w-5xl mx-auto px-6 py-12">
     <h3 class="text-2xl font-semibold">Contact</h3>
-    <p class="text-gray-600 mt-2">Shoot a message — fast replies on WhatsApp or email.</p>
+    <p class="text-gray-600 mt-2">Shoot a message — fast replies on Discord or email.</p>
     <div class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
       <div class="p-6 bg-white rounded-2xl shadow-sm space-y-6">
         <div>
           <div class="text-sm text-gray-600">Email</div>
-          <div class="font-medium">flay.designs@example.com</div>
+          <div class="font-medium">flakesofsmth@gmail.com</div>
         </div>
         <div>
-          <div class="text-sm text-gray-600">WhatsApp</div>
-          <div class="font-medium">+91 90000 00000</div>
+          <div class="text-sm text-gray-600">Discord</div>
+          <div class="font-medium">@flakesofsmth</div>
         </div>
         <div>
-          <div class="text-sm text-gray-600">Portfolio</div>
-          <a class="font-medium" href="#">github.com/flay</a>
+          <div class="text-sm text-gray-600">Pintrest</div>
+          <a class="font-medium" href="#">@flakesofsmth</a>
         </div>
       </div>
       <form class="p-6 bg-white rounded-2xl shadow-sm space-y-4">
@@ -149,7 +134,7 @@
   </section>  <!-- Footer -->  <footer class="max-w-5xl mx-auto px-6 py-8 text-gray-600">
     <div class="flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <div class="w-8 h-8 rounded-full bg-black text-white flex items-center justify-center font-bold">FD</div>
+        <div class="w-8 h-8 rounded-full bg-black text-white flex items-center justify-center font-bold">flakesofsmth</div>
         <div>
           <div class="font-medium">Flay • Designer</div>
           <div class="text-sm">Made with ❤️ • India</div>
