--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="https://via.placeholder.com/800x600?text=Brand+Pack" class="w-full h-44 object-cover"/>
         <div class="p-4">
           <h4 class="font-semibold">Minimal Brand Pack</h4>
-          <p class="text-sm text-gray-600 mt-1">Logo + 3 social templates</p>
+          <p class="text-sm text-gray-600 mt-1">Logo + 3 Product Advertisements</p>
         </div>
       </div>
       <div class="bg-white rounded-xl overflow-hidden shadow hover:shadow-lg transition-shadow">
@@ -64,8 +64,8 @@
       <div class="bg-white rounded-xl overflow-hidden shadow hover:shadow-lg transition-shadow">
         <img src="https://via.placeholder.com/800x600?text=Poster" class="w-full h-44 object-cover"/>
         <div class="p-4">
-          <h4 class="font-semibold">Poster & Flyer</h4>
-          <p class="text-sm text-gray-600 mt-1">Event poster + printable flyer</p>
+          <h4 class="font-semibold">Product Poster</h4>
+          <p class="text-sm text-gray-600 mt-1">Aesthethic Product Poster</p>
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
   </section>  <!-- Footer -->  <footer class="max-w-5xl mx-auto px-6 py-8 text-gray-600">
     <div class="flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <div class="w-8 h-8 rounded-full bg-black text-white flex items-center justify-center font-bold">flakesofsmth</div>
+        <div class="w-8 h-8 rounded-full bg-black text-white flex items-center justify-center font-bold">FD</div>
         <div>
           <div class="font-medium">Flay • Designer</div>
           <div class="text-sm">Made with ❤️ • India</div>
