--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                 <h3>Let's Create Something Amazing Together!</h3>
                 <p class="contact-desc">Whether you want a stunning ad, a bold poster, or unique digital art, I'm ready to bring your ideas to life.<br>Reach out on your favorite platform:</p>
                 <div class="contact-links">
-                    <a href="mailto:flakesofsmth@gmail.com" class="contact-btn email" title="Email, flakesofsmth@gmail.com">
-                        <span class="icon">📧</span> Email
+                    <a href="mailto:flakesofsmth@gmail.com" class="contact-btn email" title="Email">
+                        <span class="icon">📧</span> Email, flakesofsmth@gmail.com
                     </a>
-                    <a href="https://discord.com/users/flakesofsmth" class="contact-btn discord" target="_blank" title="Discord, @flakesofsmth">
-                        <span class="icon">💬</span> Discord
+                    <a href="https://discord.com/users/flakesofsmth" class="contact-btn discord" target="_blank" title="Discord>
+                        <span class="icon">💬</span> Discord, @flakesofsmth"
                     </a>
-                    <a href="https://instagram.com/flakesofsmth" class="contact-btn insta" target="_blank" title="Instagram, @flakesofsmth">
-                        <span class="icon">📸</span> Instagram
+                    <a href="https://instagram.com/flakesofsmth" class="contact-btn insta" target="_blank" title="Instagram">
+                        <span class="icon">📸</span> Instagram, @flakesofsmth
                     </a>
                 </div>
             </div>
@@ -82,4 +82,5 @@
         <p>&copy; 2025 flakesofsmth. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
