--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#posters">Posters</a></li>
                 <li><a href="#art">Art</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <div class="hero-content">
@@ -68,8 +69,8 @@
                     <a href="mailto:flakesofsmth@gmail.com" class="contact-btn email" title="Email">
                         <span class="icon">📧</span> Email, flakesofsmth@gmail.com
                     </a>
-                    <a href="https://discord.com/users/flakesofsmth" class="contact-btn discord" target="_blank" title="Discord>
-                        <span class="icon">💬</span> Discord, @flakesofsmth"
+                    <a href="https://discord.com/users/flakesofsmth" class="contact-btn discord" target="_blank" title="Discord">
+                        <span class="icon">💬</span> Discord, @flakesofsmth
                     </a>
                     <a href="https://instagram.com/flakesofsmth" class="contact-btn insta" target="_blank" title="Instagram">
                         <span class="icon">📸</span> Instagram, @flakesofsmth
@@ -82,5 +83,4 @@
         <p>&copy; 2025 flakesofsmth. All rights reserved.</p>
     </footer>
 </body>
-
 </html>
