--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flakesofsmth</title>
+    <title>Pixelated</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="hero">
         <nav class="apple-nav">
-            <span class="nav-logo">flakesofsmth</span>
+            <span class="nav-logo">Pixelated</span>
             <ul>
                 <li><a href="#ads">Ads</a></li>
                 <li><a href="#posters">Posters</a></li>
@@ -50,7 +50,7 @@
             <h2>Pricing</h2>
             <div class="pricing-card aesthetic fade-in">
                 <div class="pricing-icon">💸</div>
-                <p class="pricing-desc">Invest in your brand’s success with creative designs that stand out and connect. My pricing is designed to be fair, simple, and focused on your growth.</p>
+                <p class="pricing-desc">Invest in your brand’s success with creative designs that stand out and connect. Our pricing is designed to be fair, simple, and focused on your growth.</p>
                 <ul class="pricing-list">
                     <li><span class="price-highlight">$10</span> <span class="price-for">for <strong>2 custom designs</strong></span> <br><span class="price-types">(ads, posters, or digital art)</span></li>
                     <li>Mix and match any type to fit your needs</li>
@@ -64,7 +64,7 @@
             <h2>Contact</h2>
             <div class="contact-card apetizing fade-in">
                 <h3>Let's Create Something Amazing Together!</h3>
-                <p class="contact-desc">Whether you want a stunning ad, a bold poster, or unique digital art, I'm ready to bring your ideas to life.<br>Reach out on your favorite platform:</p>
+                <p class="contact-desc">Whether you want a stunning ad, a bold poster, or unique digital art, We at Pixelated are ready to bring your ideas to life.<br>Reach out on your favorite platform:</p>
                 <div class="contact-links">
                     <a href="mailto:flakesofsmth@gmail.com" class="contact-btn email" title="Email">
                         <span class="icon">📧</span> Email, flakesofsmth@gmail.com
@@ -80,7 +80,8 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 flakesofsmth. All rights reserved.</p>
+        <p>&copy; 2025 Pixelated. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
