--- a/gallery.html
+++ b/gallery.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flakesofsmth | Gallery</title>
+    <title>Pixelated | Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="hero">
         <nav class="apple-nav">
-            <span class="nav-logo">flakesofsmth</span>
+            <span class="nav-logo">Pixelated</span>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -24,7 +24,7 @@
         <section class="showcase">
             <h2>Advertisement Designs</h2>
             <div class="gallery large">
-                <img src="images/nothing_phone_3_ad.png" alt="Nothing Phone 3 Ad" />
+                <img src="images/nothing_phone_3_ad.png" alt="Nothing Phone 3 Ad" /> <p>by @flakesofsmth</p> 
                 <img src="images/nothing_phone_3_ad2.png" alt="Nothing Phone 2 Ad" />
                 <img src="images/nothing_headphone_1_ad.jpg" alt="Nothing Headphone 1 Ad" />
                 <img src="images/redmagic_11_pro_ad.jpg" alt="Redmagic 11 Pro Ad" />
@@ -47,7 +47,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 flakesofsmth. All rights reserved.</p>
+        <p>&copy; 2025 Pixelated. All rights reserved.</p>
     </footer>
 </body>
 </html>
