--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
         <section class="showcase">
             <h2>Advertisement Designs</h2>
             <div class="gallery large">
-                <img src="images/nothing_phone_3_ad.png" alt="Nothing Phone 3 Ad" /> <p>by @flakesofsmth</p> 
+                <img src="images/nothing_phone_3_ad.png" alt="Nothing Phone 3 Ad" />  
                 <img src="images/nothing_phone_3_ad2.png" alt="Nothing Phone 2 Ad" />
                 <img src="images/nothing_headphone_1_ad.jpg" alt="Nothing Headphone 1 Ad" />
                 <img src="images/redmagic_11_pro_ad.jpg" alt="Redmagic 11 Pro Ad" />
