--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="showcase">
-            <h1>by @flakesofsmth</h1>
+            <h1>Designs by @flakesofsmth</h1>
             <h2>Advertisement Designs</h2>
             <div class="gallery large">
                 <img src="images/nothing_phone_3_ad.png" alt="Nothing Phone 3 Ad" />  
