--- a/gallery.html
+++ b/gallery.html
@@ -48,13 +48,11 @@
         </section>
     </main>
     <main>
-       
         <section class="showcase">
-            <hr>
             <h1>Designs by @37bgxrpg</h1>
             <h2>Posters</h2>
             <div class="gallery large">
-                <img src="images/Mclaren_Senna.png" alt="McLaren Senna Poster"/>
+                <img src="images/mclaren_senna_final.png" alt="McLaren Senna Poster"/>
             </div>
         </section>
     </main>
