--- a/gallery.html
+++ b/gallery.html
@@ -53,6 +53,7 @@
             <h2>Posters</h2>
             <div class="gallery large">
                 <img src="images/mclaren_senna_final.png" alt="McLaren Senna Poster"/>
+                 <img src="images/mclaren_p1_the_finally_final.png" alt="McLaren P1 Poster"/>
             </div>
         </section>
     </main>
