--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,8 @@
             <h2>Posters</h2>
             <div class="gallery large">
                 <img src="images/mclaren_senna_final.png" alt="McLaren Senna Poster"/>
-                 <img src="images/mclaren_p1_the_finally_final.png" alt="McLaren P1 Poster"/>
+                <img src="images/mclaren_p1_the_finally_final.png" alt="McLaren P1 Poster"/>
+                <img src="images/bmw_m3_gtr_e46_nfs_final.png" alt="BMW M3 E46 NFS Most Wanted Edition Poster"/>
             </div>
         </section>
     </main>
