--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixelated</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/tabicon.ico">
 </head>
 <body>
     <header class="hero">
@@ -84,4 +85,5 @@
     </footer>
 </body>
 </html>
+
 
